--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,55 +1,50 @@
 {
-	"name": "api",
-	"version": "0.0.1",
-	"description": "",
-	"author": "",
-	"private": true,
-	"license": "UNLICENSED",
-	"scripts": {
-		"build": "nest build",
-		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-		"start": "nest start",
-		"start:dev": "nest start --watch",
-		"start:debug": "nest start --debug --watch",
-		"start:prod": "node dist/main",
-		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
-	},
-	"dependencies": {
-		"@nestjs/common": "^10.0.0",
-		"@nestjs/core": "^10.0.0",
-		"@nestjs/passport": "^10.0.3",
-		"@nestjs/platform-express": "^10.0.0",
-		"passport": "^0.7.0",
-		"passport-local": "^1.0.0",
-		"reflect-metadata": "^0.2.0",
-		"rxjs": "^7.8.1"
-	},
-	"devDependencies": {
-		"@nestjs/cli": "10.4.5",
-		"@nestjs/schematics": "10.1.4",
-		"@nestjs/testing": "10.4.4",
-		"@types/express": "5.0.0",
-		"@types/node": "22.7.4",
-		"@types/passport-local": "1.0.38",
-		"@types/supertest": "6.0.2",
-		"@typescript-eslint/eslint-plugin": "8.8.0",
-		"@typescript-eslint/parser": "8.8.0",
-		"eslint": "8.57.0",
-		"source-map-support": "0.5.21",
-		"ts-loader": "9.5.1",
-		"ts-node": "10.9.2",
-		"tsconfig-paths": "4.2.0",
-		"typescript": "5.6.2"
-	},
-	"jest": {
-		"moduleFileExtensions": ["js", "json", "ts"],
-		"rootDir": "src",
-		"testRegex": ".*\\.spec\\.ts$",
-		"transform": {
-			"^.+\\.(t|j)s$": "ts-jest"
-		},
-		"collectCoverageFrom": ["**/*.(t|j)s"],
-		"coverageDirectory": "../coverage",
-		"testEnvironment": "node"
-	}
+  "name": "api",
+  "version": "0.0.1",
+  "description": "",
+  "author": "",
+  "private": true,
+  "license": "UNLICENSED",
+  "scripts": {
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+  },
+  "dependencies": {
+    "@nestjs/common": "10.4.4",
+    "@nestjs/core": "10.4.4",
+    "@nestjs/mapped-types": "2.0.5",
+    "@nestjs/passport": "10.0.3",
+    "@nestjs/platform-express": "10.4.4",
+    "@nestjs/swagger": "7.4.2",
+    "@prisma/client": "5.20.0",
+    "class-validator": "0.14.1",
+    "passport": "0.7.0",
+    "passport-local": "1.0.0",
+    "reflect-metadata": "0.2.2",
+    "rxjs": "7.8.1",
+    "swagger-ui-express": "5.0.1"
+  },
+  "devDependencies": {
+    "@nestjs/cli": "10.4.5",
+    "@nestjs/schematics": "10.1.4",
+    "@nestjs/testing": "10.4.4",
+    "@types/express": "5.0.0",
+    "@types/node": "22.7.4",
+    "@types/passport-local": "1.0.38",
+    "@types/supertest": "6.0.2",
+    "@typescript-eslint/eslint-plugin": "8.8.0",
+    "@typescript-eslint/parser": "8.8.0",
+    "eslint": "8.57.0",
+    "prisma": "5.20.0",
+    "source-map-support": "0.5.21",
+    "ts-loader": "9.5.1",
+    "ts-node": "10.9.2",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.6.2"
+  }
 }
