--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,6 +22,7 @@
     "@nestjs/platform-express": "10.4.4",
     "@nestjs/swagger": "7.4.2",
     "@prisma/client": "5.20.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "0.14.1",
     "passport": "0.7.0",
     "passport-local": "1.0.0",
