--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,14 +17,17 @@
   "dependencies": {
     "@nestjs/common": "10.4.4",
     "@nestjs/core": "10.4.4",
+    "@nestjs/jwt": "10.2.0",
     "@nestjs/mapped-types": "2.0.5",
     "@nestjs/passport": "10.0.3",
     "@nestjs/platform-express": "10.4.4",
     "@nestjs/swagger": "7.4.2",
     "@prisma/client": "5.20.0",
-    "class-transformer": "^0.5.1",
+    "bcrypt": "5.1.1",
+    "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "passport": "0.7.0",
+    "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1",
@@ -34,8 +37,10 @@
     "@nestjs/cli": "10.4.5",
     "@nestjs/schematics": "10.1.4",
     "@nestjs/testing": "10.4.4",
+    "@types/bcrypt": "5.0.2",
     "@types/express": "5.0.0",
     "@types/node": "22.7.4",
+    "@types/passport-jwt": "4.0.1",
     "@types/passport-local": "1.0.38",
     "@types/supertest": "6.0.2",
     "@typescript-eslint/eslint-plugin": "8.8.0",
