--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,7 +15,9 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.670.0",
     "@nestjs/common": "10.4.4",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "10.4.4",
     "@nestjs/jwt": "10.2.0",
     "@nestjs/mapped-types": "2.0.5",
@@ -32,7 +34,8 @@
     "passport-local": "1.0.0",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1",
-    "swagger-ui-express": "5.0.1"
+    "swagger-ui-express": "5.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@nestjs/cli": "10.4.5",
@@ -40,6 +43,7 @@
     "@nestjs/testing": "10.4.4",
     "@types/bcrypt": "5.0.2",
     "@types/express": "5.0.0",
+    "@types/multer": "1.4.12",
     "@types/node": "22.7.4",
     "@types/passport-jwt": "4.0.1",
     "@types/passport-local": "1.0.38",
