--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,11 +13,11 @@
     "@hookform/resolvers": "3.9.0",
     "@radix-ui/react-avatar": "1.1.1",
     "@radix-ui/react-icons": "1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-scroll-area": "^1.2.0",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-popover": "1.1.2",
+    "@radix-ui/react-scroll-area": "1.2.0",
+    "@radix-ui/react-select": "2.1.2",
+    "@radix-ui/react-separator": "1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
@@ -28,14 +28,13 @@
     "lucide-react": "0.447.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-drag-drop-files": "^2.4.0",
+    "react-drag-drop-files": "2.4.0",
     "react-hook-form": "7.53.0",
     "react-router-dom": "6.26.2",
     "tailwind-merge": "2.5.2",
     "tailwindcss-animate": "1.0.7",
     "use-debounce": "10.0.4",
-    "yup": "1.4.0",
-    "zod": "^3.23.8"
+    "yup": "1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "9.11.1",
