--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.670.0",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "10.4.4",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "10.4.4",
@@ -28,7 +29,9 @@
     "bcrypt": "5.1.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
+    "nanoid": "^5.0.8",
     "nest-access-control": "3.1.0",
+    "nodemailer": "^6.9.16",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
