--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "3.9.0",
     "@radix-ui/react-avatar": "1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-label": "2.1.0",
     "@radix-ui/react-popover": "1.1.2",
@@ -21,6 +22,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-query": "5.56.2",
     "axios": "1.7.7",
     "class-variance-authority": "0.7.0",
@@ -31,6 +33,7 @@
     "react-drag-drop-files": "2.4.0",
     "react-hook-form": "7.53.0",
     "react-router-dom": "6.26.2",
+    "recharts": "^2.13.3",
     "tailwind-merge": "2.5.2",
     "tailwindcss-animate": "1.0.7",
     "use-debounce": "10.0.4",
